addons/openerp/static/css/screen.css
/* ... */
#corner ul.tools li ul li a:hover,#corner ul.tools li ul li a:focus,#corner ul.tools li ul li a:active
    {
    color: #fff;
}

#corner p.logout {
    float: left;
    height: 34px;
    margin: 0;
    padding: 0 0 0 2px;
    background: url(../images/top-sep-a.png) no-repeat;
}

#corner p.logout a {
    float: left;
    height: 34px;
    padding: 0 10px;
    background: url(../images/top-logout-a.png) repeat-x;
    font-size: 1em;
    line-height: 34px;
    text-transform: uppercase;
}

#corner p.logout a:hover,#corner p.logout a:focus,#corner p.logout a:active {
    background-image: url(../images/top-over-a.png);
}

#skip-links {
    position: absolute;
    top: 0;
    left: -10001px;
    list-style: none;
    margin: 0;
    padding: 0;
}

#skip-links li a:focus,#skip-links li a:active {
    display: block;
    position: absolute;
    left: 10001px;
    top: 0;
    z-index: 10001;
    width: 200px;
    margin: 15px 0 0 15px;
    padding: 2px 0;
    background: #333;
    color: #fff;
    text-align: center;
    text-decoration: none;
}

#main_nav {
    background: url(../images/nav-bg-a.png) repeat-x;
    width: 100%;
}

#nav {
    left: 0;
    z-index: 10;
    height: 34px; /*border-bottom: 1px solid #511712; */
    position: relative;
    width: 95%; /* Add scroll-bars */
    overflow: hidden;
}

#nav ul {
    float: left;
    list-style: none;
    margin: 0;
    padding: 6px 5px;
    display: block; /* Max width here, for users without Javascript */
    position: absolute;
}

#nav ul li {
    display: block;
    float: left;
    padding: 0 2px;
    font-size: 1em;
    text-transform: uppercase;
    text-align: center;
}

#nav ul li a {
    display: block;
    float: left;
    padding: 0 0 0 3px;
    background: url(../images/nav-items-a.png) no-repeat;
    color: #fff !important;
    font-weight: bold;
    text-shadow: #111 0 1px 0;
    text-decoration: none !important;
}

* html #nav ul li a {
    background-image: url(../images/nav-items-a-ie.png);
}

*:first-child+html #nav ul li a {
    background-image: url(../images/nav-items-a-ie.png);
}

#nav ul li a span {
    display: block;
    text-align: center;
    float: left;
    min-width: 60px;
    height: 23px;
    padding: 0 6px 0 6px;
    background: url(../images/nav-items-a.png) 100% 0 no-repeat;
    line-height: 22px;
    cursor: pointer;
}

* html #nav ul li a span {
    width: 60px;
    background-image: url(../images/nav-items-a-ie.png);
}

*:first-child+html #nav ul li a span {
    background-image: url(../images/nav-items-a-ie.png);
}

#nav ul li a:hover,#nav ul li a:focus,#nav ul li a:active,#nav ul li a.active {
    background-position: 0 -23px;
}

#nav ul li a:hover span,#nav ul li a:focus span,#nav ul li a:active span,#nav ul li a.active span
    {
    background-position: 100% -23px;
}

#nav ul li em {
    position: absolute;
    left: -10001px;
    top: -10001px;
}

.scroll_right {
    text-align: center;
    width: 2%;
}

#content div.wrap {
    padding: 0;
}

#primary {
    min-height: 100%;
    margin: 0 0 0 200px;
    vertical-align: top;
}

#primary div.wrap {
    padding-top: 0;
}

#secondary {
    position: relative;
    float: left;
    min-height: 100%;
    border-right: 1px solid #3c3c3c;
    background: #5a5858;
    display: block;
}

div.customize {
    margin-left: -10px;
    margin-right: -5px;
}

/* GENERAL
------------------------------------------- */ /* headers */
h1,h2,h3,h4,h5,h6 {
    color: #252424;
    line-height: 1.2;
    text-shadow: #fff 0 1px 0;
}

h1 {
    background:url("../images/sep-a.gif") repeat-x scroll 0 90% transparent;
    font-size:2em;
    font-weight:normal;
    padding:0 0 5px 0px;;
}

h2 {
    font-size: 1.6em;
    font-weight: normal;
}

h3 {
    font-size: 1.2em;
}

h4 {
    font-size: 1.0em;
}

h5 {
    font-size: 1.2em;
}

h6 {
    font-size: 1.0em;
}

h1 a.help,
h1 a.logs {
    display: -moz-inline-stack;
    cursor: pointer;
    display: inline; /*IE7 */
    display: inline-block;
    overflow: hidden;
    width: 14px;
    height: 14px;
    font-size: 0;
    text-indent: -10001px;
    vertical-align: middle;
}

h1 a.help {
    background: url(../images/iconset-a-help.gif) no-repeat;
}

h1 a.logs {
    background: url(../images/iconset-a-log.png) no-repeat;
}
h1 img {
    display: -moz-inline-stack;
    display: inline; /*IE7 */
    display: inline-block;
    overflow: hidden;
    width: 14px;
    height: 14px;
    vertical-align: middle;
}

* html h1 a.help {
    display: inline;
}

*:first-child+html h1 a.help {
    display: inline;
}

h1 small.sub {
    display: block;
    color: #7e7979;
    font-size: 0.5em;
    font-weight: bold;
    text-transform: uppercase;
    padding-bottom: 2px;
}

h1 br {
    display: none;
}

h1.a,h2.a,h3.a,h4.a,h5.a,h6.a {
    margin: 15px 0 5px;
    font-size: 1em;
    font-weight: bold;
    text-transform: uppercase;
    text-shadow: #fff 0 1px 0;
}

/* columns */
div.cols-two-a {
    overflow: hidden;
    width: 100%;
}

div.cols-two-a div.one {
    float: left;
    width: 50%;
}

* html div.cols-two-a div.one {
    width: 49.9%;
}

div.cols-two-a div.one div.space {
    padding-right: 5px;
}

div.cols-two-a div.two {
    float: right;
    width: 50%;
}

* html div.cols-two-a div.two {
    width: 49.9%;
}

div.cols-two-a div.two div.space {
    padding-left: 5px;
}

/* containers */
div.box-a,table.box-a {
    margin: 0;
    padding: 0;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    background: #fff;
    box-shadow: 0 1px 1px #ddd;
    -moz-box-shadow: 0 1px 1px #ddd;
    -webkit-box-shadow: 0 1px 1px #ddd;
}

* html div.box-a {
    border: solid #e8e6e6;
    border-width: 0 1px 1px;
    border-bottom-color: #ccc;
}

*:first-child+html div.box-a {
    border: solid #e8e6e6;
    border-width: 0 1px 1px;
    border-bottom-color: #ccc;
}
/* ... */

